<resources>
    <string name="app_name">Lab_04</string>
    <string name="name">Name</string>
    <string name="btn">Sign Up</string>
    <string name="channel_name">Channel1</string>
    <string name="channel_description">This is Channel 1</string>
    <string name="mail">Email</string>
    <string name="phoneNo" >Telephone</string>
    <string name="pwd">Password</string>
    <string name="rpwd">re enter password</string>
    <string name="reg">Register</string>
    <string name="btncan">Cancel</string>
</resources>